--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -1,7 +1,7 @@
 form {
   display: grid;
   grid-template-columns: clamp(200px, 80vw, 275px);
-  grid-template-rows: repeat(5, 60px);
+  grid-auto-rows: 60px;
   gap: 12px;
 }
 
