--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -9,23 +9,86 @@
   box-sizing: border-box;
 
   header {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: calc(100% / 6) calc(100% / 3) calc(100% / 3) calc(100% / 6);
     align-items: center;
+    justify-items: center;
+
     height: 80px;
+    width: 100%;
+
+    .page-header {
+      color: var(--michu-tech-primary);
+    }
+
+    .current-page-title {
+      padding-left: 20px;
+      color: var(--michu-tech-foreground);
+    }
   }
 
   .center {
+    --nav-open-width: 300px;
     display: flex;
     flex-flow: row nowrap;
-    height: calc(100% - 80px - 20px);
 
     nav {
       height: 100%;
+      transition: width 250ms ease-out;
       overflow: hidden;
 
-      transition: width 250ms ease-out;
+      .menu-container {
+        display: flex;
+        flex-flow: column;
+        gap: 5vh;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+
+        padding: 32px;
+        box-sizing: border-box;
+
+        overflow-y: auto;
+        overflow-x: hidden;
+
+        .menu-item {
+          width: 230px;
+          height: 60px;
+          transition: all 150ms ease-out;
+          cursor: pointer;
+
+          color: var(--michu-tech-foreground);
+          text-decoration: none;
+
+          display: flex;
+          flex-flow: row nowrap;
+          gap: 10px;
+          align-items: center;
+          justify-content: space-between;
+          border-radius: 2px;
+
+          padding: 0 32px;
+          box-sizing: border-box;
+        }
+
+        .menu-item:hover {
+          background-color: color-mix(in srgb, var(--michu-tech-primary) 34%, var(--michu-tech-background));
+        }
+
+        .active-menu-item {
+          background-color: color-mix(in srgb, var(--michu-tech-primary) 34%, var(--michu-tech-background));
+
+          .material-symbols-rounded {
+            color: var(--michu-tech-accent);
+          }
+        }
+      }
+    }
+
+    .nav-overlay {
+      display: none;
+      animation: navOverlayFadeIn 300ms ease-out forwards;
     }
 
     .page-container {
@@ -42,5 +105,65 @@
 
   footer {
     height: 20px;
+  }
+}
+
+@media (max-width: 1000px) {
+  nav {
+    position: fixed;
+    top: 80px;
+    left: 0;
+    bottom: 20px;
+    height: auto !important;
+
+    background-color: var(--michu-tech-background);
+    z-index: 888;
+  }
+
+  .page-container {
+    width: calc(100% - 5vw) !important;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 1000px) {
+  .nav-overlay {
+    display: block !important;
+    position: fixed;
+    top: 80px;
+    right: 0;
+    bottom: 20px;
+    left: var(--nav-open-width);
+    z-index: 888;
+    cursor: pointer;
+
+    background-color: color-mix(in srgb, var(--michu-tech-background) 80%, var(--michu-tech-foreground));;
+  }
+}
+
+@media (max-width: 500px) {
+  header {
+    grid-template-columns: calc(100% / 4) calc(100% / 2) calc(100% / 4) !important;
+  }
+
+  #swiss-budget {
+    display: none;
+  }
+
+  .current-page-title {
+    padding: 0;
+  }
+
+  nav {
+    --nav-open-width: 100% !important;
+  }
+}
+
+
+@keyframes navOverlayFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 20%;
   }
 }
