--- a/frontend/src/app/pages/home.page/home.page.component.html
+++ b/frontend/src/app/pages/home.page/home.page.component.html
@@ -1,4 +1,6 @@
-<p>home.page works!</p>
+<div appPage class="page-container" pageRoute="home" pageTitle="Home">
+    <p>home.page works!</p>
 
-<div style="height: 300vh;">
+    <div style="height: 300vh;">
+    </div>
 </div>
