--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -44,6 +44,12 @@ body {
   box-sizing: border-box;
 }
 
+.page-container {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+}
+
 .steps-panel-step {
   position: absolute;
   top: 0;
@@ -72,6 +78,25 @@ a:visited {
   color: color-mix(in srgb, var(--michu-tech-accent) 75%, black);
 }
 
+.icon-button {
+  all: unset;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+
+  transition: all 150ms ease-out;
+
+  color: var(--michu-tech-foreground);
+}
+
+.icon-button:hover {
+  opacity: 0.6;
+}
+
 @keyframes flyIn {
   0% {
     transform: translateY(-12px);
@@ -98,3 +123,4 @@ a:visited {
     transform: translateY(0);
   }
 }
+
