--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,8 +11,11 @@
             <span class="material-symbols-rounded">menu_open</span>
         </button>
         <h2 class="page-header" id="swiss-budget">Swiss Budget</h2>
-        <!--        TODO animate change, new one flies in, use angular anim x translateY x overflow hidden -->
-        <h2 class="current-page-title">{{currentPage.title}}</h2>
+        <div [@switchAnimation]="currentPage.title" class="current-page-title">
+            <div *contentReplacer="currentPage.title" class="title">
+                <h2>{{currentPage.title}}</h2>
+            </div>
+        </div>
         <button (click)="logout()" class="icon-button">
             <span class="material-symbols-rounded">logout</span>
         </button>
