--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -23,8 +23,26 @@
     }
 
     .current-page-title {
-      padding-left: 20px;
-      color: var(--michu-tech-foreground);
+      position: relative;
+      width: 100%;
+      height: 100%;
+
+      .title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+
+        h2 {
+          color: var(--michu-tech-foreground);
+          display: inline;
+          margin: 0;
+        }
+      }
     }
   }
 
