(WIP) implement transaction import

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -154,7 +154,7 @@
     z-index: 888;
     cursor: pointer;
 
-    background-color: color-mix(in srgb, var(--michu-tech-background) 80%, var(--michu-tech-foreground));;
+    background-color: color-mix(in srgb, var(--michu-tech-background) 80%, var(--michu-tech-foreground));
   }
 }
 
