--- a/frontend/src/app/components/button/button.component.scss
+++ b/frontend/src/app/components/button/button.component.scss
@@ -58,6 +58,7 @@
   animation-fill-mode: forwards;
   animation-direction: alternate;
   animation-iteration-count: infinite;
+  cursor: wait;
 }
 
 @keyframes slow-blink {
