--- a/frontend/src/app/pages/transaction.page/transaction.page.component.scss
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
 
-  cursor: progress;
+  cursor: wait;
   background-color: color-mix(in srgb, var(--michu-tech-background) 80%, var(--michu-tech-foreground));
 
   display: flex;
