--- a/frontend/src/app/pages/transaction.page/transaction.page.component.html
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.html
@@ -1,14 +1,14 @@
 <div appPage class="page-container" pageRoute="transactions" pageTitle="Transactions">
-    <ng-container *ngIf="transactions$ | async as transctions else loadingTransactions">
-        <div *ngFor="let transaction of transctions">
-            {{transaction.amount}}
-        </div>
-    </ng-container>
+    <div *ngIf="transactions$ | async as transactions else loadingTransactions" class="transactions">
+        <p *ngIf="!transactions || transactions.length < 1">No transactions imported yet!</p>
+        <app-transaction *ngFor="let transaction of transactions" [transaction]="transaction">
+        </app-transaction>
+    </div>
     <ng-template #loadingTransactions>
         <!--        TODO extract into directive instead of async pipe (give option for fullscreen or 100%) -->
         <div class="loading-banner">
             <span class="material-symbols-rounded loading-icon">sync</span>
-            <span class="label">Importing transactions ...</span>
+            <span class="label">Loading transactions ...</span>
         </div>
     </ng-template>
 </div>
