--- a/frontend/src/app/pages/transaction.page/transaction.page.component.scss
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.scss
@@ -1,3 +1,13 @@
+.transactions {
+  display: grid;
+  grid-auto-rows: 60px;
+  grid-template-columns: 100%;
+  gap: 12px;
+
+  padding: 20px;
+  box-sizing: border-box;
+}
+
 .loading-banner {
   position: absolute;
   top: 0;
@@ -15,28 +25,11 @@
   justify-content: center;
 
   .loading-icon {
-    rotate: 90deg;
-    animation-name: rotate;
-    animation-duration: 1500ms;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-    animation-direction: reverse;
-    animation-iteration-count: infinite;
-
     font-size: clamp(56px, 5vw, 100px);
   }
 
   .label {
     opacity: 80%;
     font-weight: 500;
-  }
-}
-
-@keyframes rotate {
-  0% {
-    rotate: 90deg;
-  }
-  100% {
-    rotate: 450deg;
   }
 }
