--- a/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
+++ b/frontend/src/app/pages/welcome.page/setup.subpage/setup.subpage.component.html
@@ -153,7 +153,7 @@
                     </app-button>
                 </div>
             </div>
-            <div *appPanelStep class="steps-panel-step">
+            <form *appPanelStep class="steps-panel-step">
                 <h3>Define password</h3>
                 <p>Your last step is to define a password for the application.</p>
                 <app-text-input [password]="true"
@@ -173,7 +173,7 @@
                             rightIcon="chevron_right">
                     Continue
                 </app-button>
-            </div>
+            </form>
             <div *appPanelStep class="steps-panel-step">
                 <h3>Setup completed</h3>
                 <p>Congratulations your setup is completed! You can start using Swiss Budget.
