--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -53,6 +53,8 @@ body {
   height: 100%;
   overflow-y: auto;
   position: relative;
+  padding: 2vw;
+  box-sizing: border-box;
 }
 
 .steps-panel-step {
