--- a/frontend/src/app/components/form/text-input/text-input.component.scss
+++ b/frontend/src/app/components/form/text-input/text-input.component.scss
@@ -3,7 +3,7 @@
 
   transition: all 150ms ease-out;
 
-  background-color: var(--michu-tech-primary);
+  background-color: color-mix(in srgb, var(--michu-tech-primary) 75%, var(--michu-tech-background));
   padding: 10px;
   border-radius: 2px;
   position: relative;
