--- a/frontend/src/app/components/transactions/transaction/transaction.component.scss
+++ b/frontend/src/app/components/transactions/transaction/transaction.component.scss
@@ -1,37 +1,43 @@
-.transaction {
+.transaction-header {
   width: 100%;
-  height: 100%;
-  padding: 8px;
   box-sizing: border-box;
 
   border-radius: 2px;
 
-  display: flex;
-  flex-flow: row nowrap;
+  display: grid;
+  grid-template-rows: 60px;
+  grid-template-columns: 110px auto 110px 60px;
   gap: 10px;
+  justify-items: center;
   align-items: center;
-  justify-content: space-between;
 
   .tag {
-    height: 80%;
-    aspect-ratio: 1 / 1;
-    border-radius: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 70%;
+    display: block;
   }
 
   .smaller-text {
-    font-size: 13px;
-    font-weight: 300;
-    opacity: 80%;
-    max-width: 50%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
     display: -webkit-box;
     -webkit-line-clamp: 2;
     line-clamp: 2;
     -webkit-box-orient: vertical;
+  }
+}
+
+@media (max-width: 550px) {
+  .transaction-header {
+    #receiverText {
+      content-visibility: hidden;
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  .transaction-header {
+    grid-template-columns: auto 80px 60px;
+
+    #receiverText {
+      display: none;
+    }
   }
 }
