--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -104,6 +104,15 @@ a:visited {
   opacity: 0.6;
 }
 
+.smaller-text {
+  font-size: 13px;
+  font-weight: 300;
+  opacity: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+
 .loading-icon {
   rotate: 90deg;
   animation-name: rotate;
