--- a/frontend/src/app/components/help/help.component.html
+++ b/frontend/src/app/components/help/help.component.html
@@ -1,8 +1,4 @@
-<app-button (onClick)="dialogOpen = true" height="60px" width="125px">
-    Help
-</app-button>
-
-<div *appDialog="dialogOpen" class="help-container">
+<div class="help-container">
     <h2>Need help?</h2>
     <p>
         Don't worry, I am here to help. Just describe your question in the box bellow and enter your
