--- a/frontend/src/app/components/transactions/transaction/transaction.component.html
+++ b/frontend/src/app/components/transactions/transaction/transaction.component.html
@@ -3,7 +3,7 @@
         <app-styled-amount [amount]="transaction.amount"
                            [expense]="transaction.expense">
         </app-styled-amount>
-        <span class="smaller-text" id="receiverText">{{transaction.receiver}}</span>
+        <span class="smaller-text" id="receiverText">{{!!transaction.alias ? transaction.alias : transaction.receiver}}</span>
         <span class="smaller-text">
             {{transaction.transactionDate.toDate() | date}}
         </span>
