--- a/frontend/src/app/pages/transaction.page/transaction.page.component.scss
+++ b/frontend/src/app/pages/transaction.page/transaction.page.component.scss
@@ -8,6 +8,14 @@
   box-sizing: border-box;
 }
 
+#loadMore {
+  width: 100%;
+  height: 300px;
+  position: relative;
+
+  opacity: 0.5;
+}
+
 .loading-banner {
   position: absolute;
   top: 0;
